# rust-workspace-starter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  devenv.nix  devenv.yaml  opencode.json  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-build-push.yml  rust-quality-gates.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
docs/: index.md
docs/architecture/: layering.md  repo-layout.md
docs/exec-plans/: README.md  plan-template.md
docs/principles/: agent-first.md
docs/workflows/: quality-gates.md
scripts/: check_workspace_dependency_policy.py
